syntax = "proto3";

package org.dpppt.backend.sdk.model.interops.proto;
option java_package = "org.dpppt.backend.sdk.model.interops.proto";
option java_outer_classname = "EfgsProto";

message DiagnosisKeyBatch {
  repeated DiagnosisKey keys = 1;
}

message DiagnosisKey {
  bytes keyData = 1; // key
  uint32 rollingStartIntervalNumber = 2;
  uint32 rollingPeriod = 3; // number of 10-minute windows between key-rolling
  int32 transmissionRiskLevel = 4; // risk of transmission
  repeated string visitedCountries = 5;
  string origin = 6; // country of origin
  ReportType reportType = 7; // set by backend
  sint32 days_since_onset_of_symptoms = 8;
}

enum ReportType {
  UNKNOWN = 0;
  CONFIRMED_TEST = 1;
  CONFIRMED_CLINICAL_DIAGNOSIS = 2;
  SELF_REPORT = 3;
  RECURSIVE = 4;
  REVOKED = 5;
}